[package]
name = "dag"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
# pro for rust
description = "Rust implements Directed acyclic graph."
readme = "README.md"
repository = "https://github.com/dravenk/dag/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/dag"
keywords = ["dag", "mining", "coin", "blockchain", "web3"]

[dependencies]
